--- a/client/src/index.css
+++ b/client/src/index.css
@@ -21,7 +21,7 @@ body {
     --secondary-foreground: 222.2 47.4% 11.2%;
     --muted: 210 40% 96.1%;
     --muted-foreground: 215.4 16.3% 46.9%;
-    --accent: 210 40% 96.1%;
+    --accent: 290 18% 93%;
     --accent-foreground: 222.2 47.4% 11.2%;
     --destructive: 0 84.2% 60.2%;
     --destructive-foreground: 210 40% 98%;
@@ -70,9 +70,12 @@ body {
   }
 
   body {
-    @apply bg-background text-foreground;
+    @apply bg-[#F5F5F5] text-primary;
     font-family: "Alexandria", "inter";
   }
 }
 /* // <uniquifier>: Use a unique and descriptive class name
 // <weight>: Use a value from 100 to 900 */
+.nav-shadow {
+  box-shadow: 0px 16px 54.9px 0px rgba(0, 0, 0, 0.03);
+}
