--- a/client/src/index.css
+++ b/client/src/index.css
@@ -79,3 +79,25 @@ body {
 .nav-shadow {
   box-shadow: 0px 16px 54.9px 0px rgba(0, 0, 0, 0.03);
 }
+.product-image-slider .slick-prev,
+.product-image-slider .slick-next {
+  z-index: 1;
+}
+
+.product-image-slider .slick-prev {
+  left: 10px;
+}
+
+.product-image-slider .slick-next {
+  right: 10px;
+}
+
+.product-image-slider .slick-prev:before,
+.product-image-slider .slick-next:before {
+  font-size: 24px;
+  color: #4a5568;
+}
+
+.product-image-slider .slick-slide {
+  padding: 0 10px;
+}
